k8s/app/devops-app/backend/middleware-strip-prefix.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-prefix-backend
  namespace: development
spec:
  stripPrefix:
    prefixes:
      - "/backend"
