k8s/app/devops-app/backend/devops-app-be-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-app-backend
  namespace: development
  labels:
    app.kubernetes.io/name: devops-app-backend
    app.kubernetes.io/version: "1.0.0"
spec:
  type: NodePort
  selector:
    app: devops-app-backend
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30001
