k8s/app/devops-app/backend/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: devops-app-backend
  namespace: development
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`cluster.dev.local`) && PathPrefix(`/backend`)
      kind: Rule
      services:
        - name: devops-app-backend
          port: 8080
      middlewares:
        - name: strip-prefix-backend
