k8s/app/devops-app/backend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devops-app-backend
  namespace: development
spec:
  ingressClassName: traefik-lb
  rules:
    - host: backend
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: devops-app-backend
                port:
                  number: 8080
